<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_add_item">Add new item</string>
    <string name="title_activity_test_sqlite">TestSQLiteActivity</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="title_activity_products_from_server">Products from server</string>

	<string name="Waiting">Please wait...</string>
    <string name="app_name">PigletStorage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="Add_photo">Add photo</string>
    <string name="make_photo_label">Camera</string>
    <string name="upload_photo_label">Upload</string>
    <string name="product_name">Product name</string>
    <string name="product_type">Product type</string>
    <string name="quantity">Quantity</string>
    <string name="product_price">Product price</string>
    <string name="product_quantity_initial">1</string>
    <string name="get_location_label">Get location</string>
    <string name="title_activity_list">List</string>
    <string name="save_product_label">Save product</string>

    <string name="title_activity_map">MapActivity</string>

</resources>
