<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_photo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/make_photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/upload_photo"
                android:layout_toStartOf="@+id/make_photo"
                android:onClick="doLaunchContactPicker"
                android:text="@string/make_photo_label" >
            </Button>

            <Button
                android:id="@+id/upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="doLaunchContactPicker"
                android:text="@string/upload_photo_label" >
            </Button>
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"></TextView>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/product_name"
            android:id="@+id/product_name_preview"></EditText>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"></TextView>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/product_type"
            android:id="@+id/product_type_preview"></EditText>
        
    </LinearLayout>

</ScrollView>